# android-cmake-example

./: CMakeLists.txt  README
android/: AndroidManifest.xml
src/: main.cpp
